TCP&GRPC service CRUD finished
