# docs/swagger.yaml
@@ -73,6 +73,57 @@ definitions:
     required:
     - password
     type: object
+  dto.ServiceAddGrpcInput:
+    properties:
+      black_list:
+        description: 黑名单IP，以逗号间隔，白名单优先级高于黑名单
+        type: string
+      clientip_flow_limit:
+        description: 客户端IP限流
+        type: integer
+      forbid_list:
+        description: 禁用IP列表
+        type: string
+      header_transfor:
+        description: metadata转换
+        type: string
+      ip_list:
+        description: IP列表
+        type: string
+      open_auth:
+        description: 是否开启权限验证
+        type: integer
+      port:
+        description: 端口，需要设置8001-8999范围内
+        type: integer
+      round_type:
+        description: 轮询策略
+        type: integer
+      service_desc:
+        description: 服务描述
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        type: integer
+      service_name:
+        description: 服务名称
+        type: string
+      weight_list:
+        description: 权重列表
+        type: string
+      white_host_name:
+        description: 白名单主机，以逗号间隔
+        type: string
+      white_list:
+        description: 白名单IP，以逗号间隔，白名单优先级高于黑名单
+        type: string
+    required:
+    - ip_list
+    - port
+    - service_desc
+    - service_name
+    - weight_list
+    type: object
   dto.ServiceAddHTTPInput:
     properties:
       black_list:
@@ -145,6 +196,54 @@ definitions:
     - service_name
     - weight_list
     type: object
+  dto.ServiceAddTcpInput:
+    properties:
+      black_list:
+        description: 黑名单IP，以逗号间隔，白名单优先级高于黑名单
+        type: string
+      clientip_flow_limit:
+        description: 客户端IP限流
+        type: integer
+      forbid_list:
+        description: 禁用IP列表
+        type: string
+      ip_list:
+        description: IP列表
+        type: string
+      open_auth:
+        description: 是否开启权限验证
+        type: integer
+      port:
+        description: 端口，需要设置8001-8999范围内
+        type: integer
+      round_type:
+        description: 轮询策略
+        type: integer
+      service_desc:
+        description: 服务描述
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        type: integer
+      service_name:
+        description: 服务名称
+        type: string
+      weight_list:
+        description: 权重列表
+        type: string
+      white_host_name:
+        description: 白名单主机，以逗号间隔
+        type: string
+      white_list:
+        description: 白名单IP，以逗号间隔，白名单优先级高于黑名单
+        type: string
+    required:
+    - ip_list
+    - port
+    - service_desc
+    - service_name
+    - weight_list
+    type: object
   dto.ServiceListItemOutput:
     properties:
       id:
@@ -195,6 +294,61 @@ definitions:
         items:
           type: integer
         type: array
+    type: object
+  dto.ServiceUpdateGrpcInput:
+    properties:
+      black_list:
+        description: 黑名单IP，以逗号间隔，白名单优先级高于黑名单
+        type: string
+      clientip_flow_limit:
+        description: 客户端IP限流
+        type: integer
+      forbid_list:
+        description: 禁用IP列表
+        type: string
+      header_transfor:
+        description: metadata转换
+        type: string
+      id:
+        description: 服务ID
+        type: integer
+      ip_list:
+        description: IP列表
+        type: string
+      open_auth:
+        description: 是否开启权限验证
+        type: integer
+      port:
+        description: 端口，需要设置8001-8999范围内
+        type: integer
+      round_type:
+        description: 轮询策略
+        type: integer
+      service_desc:
+        description: 服务描述
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        type: integer
+      service_name:
+        description: 服务名称
+        type: string
+      weight_list:
+        description: 权重列表
+        type: string
+      white_host_name:
+        description: 白名单主机，以逗号间隔
+        type: string
+      white_list:
+        description: 白名单IP，以逗号间隔，白名单优先级高于黑名单
+        type: string
+    required:
+    - id
+    - ip_list
+    - port
+    - service_desc
+    - service_name
+    - weight_list
     type: object
   dto.ServiceUpdateHTTPInput:
     properties:
@@ -269,6 +423,58 @@ definitions:
     - id
     - ip_list
     - rule
+    - service_desc
+    - service_name
+    - weight_list
+    type: object
+  dto.ServiceUpdateTcpInput:
+    properties:
+      black_list:
+        description: 黑名单IP，以逗号间隔，白名单优先级高于黑名单
+        type: string
+      clientip_flow_limit:
+        description: 客户端IP限流
+        type: integer
+      forbid_list:
+        description: 禁用IP列表
+        type: string
+      id:
+        description: 服务ID
+        type: integer
+      ip_list:
+        description: IP列表
+        type: string
+      open_auth:
+        description: 是否开启权限验证
+        type: integer
+      port:
+        description: 端口，需要设置8001-8999范围内
+        type: integer
+      round_type:
+        description: 轮询策略
+        type: integer
+      service_desc:
+        description: 服务描述
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        type: integer
+      service_name:
+        description: 服务名称
+        type: string
+      weight_list:
+        description: 权重列表
+        type: string
+      white_host_name:
+        description: 白名单主机，以逗号间隔
+        type: string
+      white_list:
+        description: 白名单IP，以逗号间隔，白名单优先级高于黑名单
+        type: string
+    required:
+    - id
+    - ip_list
+    - port
     - service_desc
     - service_name
     - weight_list
@@ -505,6 +711,34 @@ paths:
       summary: 管理员退出
       tags:
       - 管理员接口
+  /service/service_add_grpc:
+    post:
+      consumes:
+      - application/json
+      description: 添加 GRPC 服务
+      operationId: /service/service_add_grpc
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceAddGrpcInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 添加 GRPC 服务
+      tags:
+      - 服务管理
   /service/service_add_http:
     post:
       consumes:
@@ -531,6 +765,34 @@ paths:
                   type: string
               type: object
       summary: 添加 HTTP 服务
+      tags:
+      - 服务管理
+  /service/service_add_tcp:
+    post:
+      consumes:
+      - application/json
+      description: 添加 TCP 服务
+      operationId: /service/service_add_tcp
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceAddTcpInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 添加 TCP 服务
       tags:
       - 服务管理
   /service/service_delete:
@@ -650,6 +912,34 @@ paths:
       summary: 服务统计
       tags:
       - 服务管理
+  /service/service_update_grpc:
+    post:
+      consumes:
+      - application/json
+      description: 修改 GRPC 服务
+      operationId: /service/service_update_grpc
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceUpdateGrpcInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 修改 GRPC 服务
+      tags:
+      - 服务管理
   /service/service_update_http:
     post:
       consumes:
@@ -676,6 +966,34 @@ paths:
                   type: string
               type: object
       summary: 修改 HTTP 服务
+      tags:
+      - 服务管理
+  /service/service_update_tcp:
+    post:
+      consumes:
+      - application/json
+      description: 修改 TCP 服务
+      operationId: /service/service_update_tcp
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceUpdateTcpInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 修改 TCP 服务
       tags:
       - 服务管理
 swagger: "2.0"
