# internal/gateway/dto/service.go
@@ -5,6 +5,102 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type ServiceUpdateTcpInput struct {
+	ID          int64  `json:"id" form:"id" comment:"服务ID" validate:"required"`                                        // 服务ID
+	ServiceName string `json:"service_name" form:"service_name" comment:"服务名称" validate:"required,valid_service_name"` // 服务名称
+	ServiceDesc string `json:"service_desc" form:"service_desc" comment:"服务描述" validate:"required"`                    // 服务描述
+
+	Port int `json:"port" form:"port" comment:"端口，需要设置8001-8999范围内" validate:"required,min=8001,max=8999"` // 端口，需要设置8001-8999范围内
+
+	OpenAuth          int    `json:"open_auth" form:"open_auth" comment:"是否开启权限验证" validate:""`                              // 是否开启权限验证
+	BlackList         string `json:"black_list" form:"black_list" comment:"黑名单IP，以逗号间隔，白名单优先级高于黑名单" validate:"valid_iplist"` // 黑名单IP，以逗号间隔，白名单优先级高于黑名单
+	WhiteList         string `json:"white_list" form:"white_list" comment:"白名单IP，以逗号间隔，白名单优先级高于黑名单" validate:"valid_iplist"` // 白名单IP，以逗号间隔，白名单优先级高于黑名单
+	WhiteHostName     string `json:"white_host_name" form:"white_host_name" comment:"白名单主机，以逗号间隔" validate:"valid_iplist"`   // 白名单主机，以逗号间隔
+	ClientIPFlowLimit int    `json:"clientip_flow_limit" form:"clientip_flow_limit" comment:"客户端IP限流" validate:""`           // 客户端IP限流
+	ServiceFlowLimit  int    `json:"service_flow_limit" form:"service_flow_limit" comment:"服务端限流" validate:""`               // 服务端限流
+
+	RoundType  int    `json:"round_type" form:"round_type" comment:"轮询策略" validate:""`                            // 轮询策略
+	IpList     string `json:"ip_list" form:"ip_list" comment:"IP列表" validate:"required,valid_ipportlist"`         // IP列表
+	WeightList string `json:"weight_list" form:"weight_list" comment:"权重列表" validate:"required,valid_weightlist"` // 权重列表
+	ForbidList string `json:"forbid_list" form:"forbid_list" comment:"禁用IP列表" validate:"valid_iplist"`            // 禁用IP列表
+}
+
+func (params *ServiceUpdateTcpInput) BindingValidParams(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, params)
+}
+
+type ServiceAddTcpInput struct {
+	ServiceName string `json:"service_name" form:"service_name" comment:"服务名称" validate:"required,valid_service_name"` // 服务名称
+	ServiceDesc string `json:"service_desc" form:"service_desc" comment:"服务描述" validate:"required"`                    // 服务描述
+
+	Port int `json:"port" form:"port" comment:"端口，需要设置8001-8999范围内" validate:"required,min=8001,max=8999"` // 端口，需要设置8001-8999范围内
+
+	OpenAuth          int    `json:"open_auth" form:"open_auth" comment:"是否开启权限验证" validate:""`                              // 是否开启权限验证
+	BlackList         string `json:"black_list" form:"black_list" comment:"黑名单IP，以逗号间隔，白名单优先级高于黑名单" validate:"valid_iplist"` // 黑名单IP，以逗号间隔，白名单优先级高于黑名单
+	WhiteList         string `json:"white_list" form:"white_list" comment:"白名单IP，以逗号间隔，白名单优先级高于黑名单" validate:"valid_iplist"` // 白名单IP，以逗号间隔，白名单优先级高于黑名单
+	WhiteHostName     string `json:"white_host_name" form:"white_host_name" comment:"白名单主机，以逗号间隔" validate:"valid_iplist"`   // 白名单主机，以逗号间隔
+	ClientIPFlowLimit int    `json:"clientip_flow_limit" form:"clientip_flow_limit" comment:"客户端IP限流" validate:""`           // 客户端IP限流
+	ServiceFlowLimit  int    `json:"service_flow_limit" form:"service_flow_limit" comment:"服务端限流" validate:""`               // 服务端限流
+
+	RoundType  int    `json:"round_type" form:"round_type" comment:"轮询策略" validate:""`                            // 轮询策略
+	IpList     string `json:"ip_list" form:"ip_list" comment:"IP列表" validate:"required,valid_ipportlist"`         // IP列表
+	WeightList string `json:"weight_list" form:"weight_list" comment:"权重列表" validate:"required,valid_weightlist"` // 权重列表
+	ForbidList string `json:"forbid_list" form:"forbid_list" comment:"禁用IP列表" validate:"valid_iplist"`            // 禁用IP列表
+}
+
+func (params *ServiceAddTcpInput) BindingValidParams(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, params)
+}
+
+type ServiceUpdateGrpcInput struct {
+	ID          int64  `json:"id" form:"id" comment:"服务ID" validate:"required"`                                        // 服务ID
+	ServiceName string `json:"service_name" form:"service_name" comment:"服务名称" validate:"required,valid_service_name"` // 服务名称
+	ServiceDesc string `json:"service_desc" form:"service_desc" comment:"服务描述" validate:"required"`                    // 服务描述
+
+	Port           int    `json:"port" form:"port" comment:"端口，需要设置8001-8999范围内" validate:"required,min=8001,max=8999"`         // 端口，需要设置8001-8999范围内
+	HeaderTransfor string `json:"header_transfor" form:"header_transfor" comment:"metadata转换" validate:"valid_header_transfor"` // metadata转换
+
+	OpenAuth          int    `json:"open_auth" form:"open_auth" comment:"是否开启权限验证" validate:""`                              // 是否开启权限验证
+	BlackList         string `json:"black_list" form:"black_list" comment:"黑名单IP，以逗号间隔，白名单优先级高于黑名单" validate:"valid_iplist"` // 黑名单IP，以逗号间隔，白名单优先级高于黑名单
+	WhiteList         string `json:"white_list" form:"white_list" comment:"白名单IP，以逗号间隔，白名单优先级高于黑名单" validate:"valid_iplist"` // 白名单IP，以逗号间隔，白名单优先级高于黑名单
+	WhiteHostName     string `json:"white_host_name" form:"white_host_name" comment:"白名单主机，以逗号间隔" validate:"valid_iplist"`   // 白名单主机，以逗号间隔
+	ClientIPFlowLimit int    `json:"clientip_flow_limit" form:"clientip_flow_limit" comment:"客户端IP限流" validate:""`           // 客户端IP限流
+	ServiceFlowLimit  int    `json:"service_flow_limit" form:"service_flow_limit" comment:"服务端限流" validate:""`               // 服务端限流
+
+	RoundType  int    `json:"round_type" form:"round_type" comment:"轮询策略" validate:""`                            // 轮询策略
+	IpList     string `json:"ip_list" form:"ip_list" comment:"IP列表" validate:"required,valid_ipportlist"`         // IP列表
+	WeightList string `json:"weight_list" form:"weight_list" comment:"权重列表" validate:"required,valid_weightlist"` // 权重列表
+	ForbidList string `json:"forbid_list" form:"forbid_list" comment:"禁用IP列表" validate:"valid_iplist"`            // 禁用IP列表
+}
+
+func (params *ServiceUpdateGrpcInput) BindingValidParams(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, params)
+}
+
+type ServiceAddGrpcInput struct {
+	ServiceName string `json:"service_name" form:"service_name" comment:"服务名称" validate:"required,valid_service_name"` // 服务名称
+	ServiceDesc string `json:"service_desc" form:"service_desc" comment:"服务描述" validate:"required"`                    // 服务描述
+
+	Port           int    `json:"port" form:"port" comment:"端口，需要设置8001-8999范围内" validate:"required,min=8001,max=8999"`         // 端口，需要设置8001-8999范围内
+	HeaderTransfor string `json:"header_transfor" form:"header_transfor" comment:"metadata转换" validate:"valid_header_transfor"` // metadata转换
+
+	OpenAuth          int    `json:"open_auth" form:"open_auth" comment:"是否开启权限验证" validate:""`                              // 是否开启权限验证
+	BlackList         string `json:"black_list" form:"black_list" comment:"黑名单IP，以逗号间隔，白名单优先级高于黑名单" validate:"valid_iplist"` // 黑名单IP，以逗号间隔，白名单优先级高于黑名单
+	WhiteList         string `json:"white_list" form:"white_list" comment:"白名单IP，以逗号间隔，白名单优先级高于黑名单" validate:"valid_iplist"` // 白名单IP，以逗号间隔，白名单优先级高于黑名单
+	WhiteHostName     string `json:"white_host_name" form:"white_host_name" comment:"白名单主机，以逗号间隔" validate:"valid_iplist"`   // 白名单主机，以逗号间隔
+	ClientIPFlowLimit int    `json:"clientip_flow_limit" form:"clientip_flow_limit" comment:"客户端IP限流" validate:""`           // 客户端IP限流
+	ServiceFlowLimit  int    `json:"service_flow_limit" form:"service_flow_limit" comment:"服务端限流" validate:""`               // 服务端限流
+
+	RoundType  int    `json:"round_type" form:"round_type" comment:"轮询策略" validate:""`                            // 轮询策略
+	IpList     string `json:"ip_list" form:"ip_list" comment:"IP列表" validate:"required,valid_ipportlist"`         // IP列表
+	WeightList string `json:"weight_list" form:"weight_list" comment:"权重列表" validate:"required,valid_weightlist"` // 权重列表
+	ForbidList string `json:"forbid_list" form:"forbid_list" comment:"禁用IP列表" validate:"valid_iplist"`            // 禁用IP列表
+}
+
+func (params *ServiceAddGrpcInput) BindingValidParams(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, params)
+}
+
 type ServiceStatOutput struct {
 	Today     []int64 `json:"today" form:"today" comment:"今日流量" example:"" validate:""`         // 列表
 	Yesterday []int64 `json:"yesterday" form:"yesterday" comment:"昨日流量" example:"" validate:""` // 列表
